@@ -2,6 +2,12 @@ Revision history for Perl distribution Test-Class-Moose
 
 {{$NEXT}}
 
+  [ENHANCEMENTS]
+
+  * Converted uses of JSON.pm to JSON::MaybeXS. Implemented by Karen
+    Etheridge. PR #98.
+
+
 0.95     2018-11-03
 
   [ENHANCEMENTS]
